cambios pre despliegue

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     
     <div class="index__cover">
         <h1 class="cover-title">Administre las finanzas de su entidad con Integral V6</h1>
-        <a href="productos" class="button blue">
+        <a href="productos.html" class="button blue">
             <p class="button-text">Conoce nuestros productos</p>
         </a>
     </div>
@@ -61,7 +61,7 @@
                     Brindamos asesoría y acompañamiento a municipios (entes territoriales), institutos de deporte, fondos de servicios educativos, universidades, empresas de servicios públicos y sistemas de rendición en línea (RCL).
                 </p>
             </div>
-            <a href="productos" class="button border-blue">
+            <a href="productos.html" class="button border-blue">
                 <p class="button-text">Descubre nuestros productos</p>
             </a>
         </div>
@@ -78,11 +78,11 @@
                 </p>
             </div>
             <div class="versions">
-                <a href="productos" class="button border-blue">
+                <a href="productos.html" class="button border-blue">
                     <p class="button-text">Software V5</p>
                     <img class="button-logo" src="img/logos/blue-logo-v5.svg" alt="">
                 </a>
-                <a href="productos" class="button blue">
+                <a href="productos.html" class="button blue">
                     <p class="button-text">Software V6 </p>
                     <img class="button-logo" src="img/logos/white-logo-v6wf.svg" alt="">
                 </a>
@@ -120,7 +120,7 @@
                     Brindamos capacitaciones (virtuales o presenciales) sobre el uso de nuestros aplicativos y contamos con un excelente equipo de soporte dispuesto a atender y solucionar cualquier duda o inquietud.
                 </p>
             </div>
-            <a class="button border-blue" href="contacto">
+            <a class="button border-blue" href="contacto.html">
                 <p class="button-text">Contáctenos</p>
             </a>
         </div>
@@ -135,14 +135,14 @@
             </ul>
             <ul class="footer-section">
                 <li><span>Productos<span></li>
-                <li><a href="productos">Software V5</a></li>
-                <li><a href="productos">Software V6</a></li>
+                <li><a href="productos.html">Software V5</a></li>
+                <li><a href="productos.html">Software V6</a></li>
             </ul>
             <ul class="footer-section">
                 <li><span>Nosotros<span></li>
-                <li><a href="nosotros">Quienes somos</a></li>
-                <li><a href="nosotros">Lo que hacemos</a></li>
-                <li><a href="nosotros">Casos de éxito</a></li>
+                <li><a href="nosotros.html">Quienes somos</a></li>
+                <li><a href="nosotros.html">Lo que hacemos</a></li>
+                <li><a href="nosotros.html">Casos de éxito</a></li>
             </ul>
             <ul class="footer-section">
                 <li><span>Legal<span></li>
@@ -151,7 +151,7 @@
             </ul>
             <ul class="footer-section">
                 <li><span>Contacto<span></li>
-                <a href="contacto">Contáctanos</a>
+                <a href="contacto.html">Contáctanos</a>
             </ul>
         </div>
         <div class="logo_footer">
