--- a/nosotros.html
+++ b/nosotros.html
@@ -70,38 +70,16 @@
         <ul>
             <li><a href="files/integralv6-privacidad.pdf" target="_blank">Política de privacidad</a></li>
             <li><a href="files/integralv6-tratamiento-datos.pdf" target="_blank">Política de tratamiento de datos personales</a></li>
-            <li><a href="https://drive.google.com/drive/folders/1caXtZ81p9pehog7CEsmXNi14J_C6lJAA?usp=sharing" target="_blank">Manual de usuario (se requiere acceso)</a></li>
+            <li><a href="" target="_blank">Manual de usuario (se requiere acceso)</a></li>
         </ul>
     </aside>
     <div class="separador container clear">
-        <h2 class="center">Casos de Éxito</h2>
-        <p class="center">Selecciona uno para saber más:</p>
-
-       
-        <div class="info_exitos display_none">
-            <div class="logo">
-                <img src="img/logos/blue-logo-v5.svg" alt="">
-            </div>
-
-            <div class="title">
-                <h3></h3>
-            </div>
-
-            <div class="description">
-                <p class="text"></p>
-                <a class="button border-blue webpage" href="">
-                    <p class="button-text">Página oficial</p>
-                </a>
-                <p class="contactos_title">Contactos de confianza</p>
-                <div class="contactos">
-                </div>
-            </div>
-        </div>
+        
     </div>
-    <div class="cover_nosotros_final">
+    <div class="cover_nosotros_final">                                                                                                      
         <div class="bottom">
             <h2>¡No lo pienses más!</h2>
-            <a href="productos" class="button border-blue">
+            <a href="productos.html" class="button border-blue">
                 <p class="button-text">Consigue nuestro software</p>
             </a>
         </div>
@@ -117,14 +95,13 @@
             </ul>
             <ul class="footer-section">
                 <li><span>Productos<span></li>
-                <li><a href="productos">Software V5</a></li>
-                <li><a href="productos">Software V6</a></li>
+                <li><a href="productos.html">Software V5</a></li>
+                <li><a href="productos.html">Software V6</a></li>
             </ul>
             <ul class="footer-section">
                 <li><span>Nosotros<span></li>
-                <li><a href="nosotros">Quienes somos</a></li>
-                <li><a href="nosotros">Lo que hacemos</a></li>
-                <li><a href="nosotros">Casos de éxito</a></li>
+                <li><a href="nosotros.html">Quienes somos</a></li>
+                <li><a href="nosotros.html">Lo que hacemos</a></li>
             </ul>
             <ul class="footer-section">
                 <li><span>Legal<span></li>
@@ -133,7 +110,7 @@
             </ul>
             <ul class="footer-section">
                 <li><span>Contacto<span></li>
-                <a href="contacto">Contáctanos</a>
+                <a href="contacto.html">Contáctanos</a>
             </ul>
         </div>
         <div class="logo_footer">
