--- a/contacto.html
+++ b/contacto.html
@@ -107,53 +107,51 @@
         </a>
     </section>
 
-<footer>
-    <div class="footer-container">
-        <div class="footer_menus">
-            <ul class="footer-section">
-                <li><span>Usuarios<span></li>
-                <li><a href="https://webmail1.hostinger.co" target="_blank">Empleados</a></li>
-                <li><a href="http://169.44.185.184:7777/jtrac/app/" target="_blank">Acceso a Jtrac</a></li>
-            </ul>
-            <ul class="footer-section">
-                <li><span>Productos<span></li>
-                <li><a href="productos">Software V5</a></li>
-                <li><a href="productos">Software V6</a></li>
-            </ul>
-            <ul class="footer-section">
-                <li><span>Nosotros<span></li>
-                <li><a href="nosotros">Quienes somos</a></li>
-                <li><a href="nosotros">Lo que hacemos</a></li>
-                <li><a href="nosotros">Casos de éxito</a></li>
-            </ul>
-            <ul class="footer-section">
-                <li><span>Legal<span></li>
-                <li><a href="files/integralv6-privacidad.pdf" target="_blank">Política de privacidad</a></li>
-                <li><a href="files/integralv6-tratamiento-datos.pdf" target="_blank">Política de tratamiento de datos</a></li>
-            </ul>
-            <ul class="footer-section">
-                <li><span>Contacto<span></li>
-                <a href="contacto">Contáctanos</a>
-            </ul>
-        </div>
-        <div class="logo_footer">
-            <img src="img/logos/white-logo-v6.svg" id="lobov6">
-            <div class="responsive_logo">
-                <img src="img/integral-white.svg" alt="integral">
-                <p>¡Estamos para servirte!</p>
+    <footer>
+        <div class="footer-container">
+            <div class="footer_menus">
+                <ul class="footer-section">
+                    <li><span>Usuarios<span></li>
+                    <li><a href="https://webmail1.hostinger.co" target="_blank">Empleados</a></li>
+                    <li><a href="http://169.44.185.184:7777/jtrac/app/" target="_blank">Acceso a Jtrac</a></li>
+                </ul>
+                <ul class="footer-section">
+                    <li><span>Productos<span></li>
+                    <li><a href="productos.html">Software V5</a></li>
+                    <li><a href="productos.html">Software V6</a></li>
+                </ul>
+                <ul class="footer-section">
+                    <li><span>Nosotros<span></li>
+                    <li><a href="nosotros.html">Quienes somos</a></li>
+                    <li><a href="nosotros.html">Lo que hacemos</a></li>
+                </ul>
+                <ul class="footer-section">
+                    <li><span>Legal<span></li>
+                    <li><a href="files/integralv6-privacidad.pdf" target="_blank">Política de privacidad</a></li>
+                    <li><a href="files/integralv6-tratamiento-datos.pdf" target="_blank">Política de tratamiento de datos</a></li>
+                </ul>
+                <ul class="footer-section">
+                    <li><span>Contacto<span></li>
+                    <a href="contacto.html">Contáctanos</a>
+                </ul>
+            </div>
+            <div class="logo_footer">
+                <img src="img/logos/white-logo-v6.svg" id="lobov6">
+                <div class="responsive_logo">
+                    <img src="img/integral-white.svg" alt="integral">
+                    <p>¡Estamos para servirte!</p>
+                </div>
             </div>
         </div>
-    </div>
-    <hr class="footer-separator">
-    <p class="copyright">
-        Copyright &copy; 2020 INTEGRAL V6. Todos los derechos reservados
-    </p>
-</footer>
+        <hr class="footer-separator">
+        <p class="copyright">
+            Copyright &copy; 2020 INTEGRAL V6. Todos los derechos reservados
+        </p>
+    </footer>
 <script src="js/burguer.js" type="text/javascript"></script>
 </body>
 <script src="js/db_interactions.js" type="text/javascript"></script>
 <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
-<script src='https://www.google.com/recaptcha/api.js' async defer></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/AlertifyJS/1.13.1/alertify.min.js"></script>
 <script src="js/mail_notification.js"></script>
 <script src="js/mapa.js"></script>
