--- a/productos.html
+++ b/productos.html
@@ -56,13 +56,13 @@
             </div>
             <div class="comparison-buttons">
                 <div class="el1">
-                    <a href="email-form.php?producto=v5" class="button border-purple">
+                    <a href="" class="button border-purple">
                         <p class="button-text">Obtenga V5</p>
                         <img class="button-logo" src="img/logos/blue-logo-v5.svg" alt="">
                     </a>
                 </div>
                 <div class="el2">
-                    <a href="email-form.php?producto=v6" class="button purple">
+                    <a href="" class="button purple">
                         <p class="button-text">Obtenga V6</p>
                         <img class="button-logo" src="img/logos/white-logo-v6wf.svg" alt="">
                     </a>
@@ -93,14 +93,13 @@
             </ul>
             <ul class="footer-section">
                 <li><span>Productos<span></li>
-                <li><a href="productos">Software V5</a></li>
-                <li><a href="productos">Software V6</a></li>
+                <li><a href="productos.html">Software V5</a></li>
+                <li><a href="productos.html">Software V6</a></li>
             </ul>
             <ul class="footer-section">
                 <li><span>Nosotros<span></li>
-                <li><a href="nosotros">Quienes somos</a></li>
-                <li><a href="nosotros">Lo que hacemos</a></li>
-                <li><a href="nosotros">Casos de éxito</a></li>
+                <li><a href="nosotros.html">Quienes somos</a></li>
+                <li><a href="nosotros.html">Lo que hacemos</a></li>
             </ul>
             <ul class="footer-section">
                 <li><span>Legal<span></li>
@@ -109,7 +108,7 @@
             </ul>
             <ul class="footer-section">
                 <li><span>Contacto<span></li>
-                <a href="contacto">Contáctanos</a>
+                <a href="contacto.html">Contáctanos</a>
             </ul>
         </div>
         <div class="logo_footer">
