--- a/productos.html
+++ b/productos.html
@@ -23,7 +23,7 @@
 <header>
     <div class="nav_container">
         <div class="nav_logo">
-            <a href="index" id="integral">
+            <a href="index.html" id="integral">
                 <img src="img/integral-white.svg" alt="integral">
                 <a class="burguer"><i class="fas fa-bars"></i></a>
             </a>
